[package]
name = "rogers"
version = "0.1.0"
authors = ["Brian Duff <cairndubh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde-xml-rs = "0.3.1"